# film-studio

./: AGENTS.md  PRODUCTION_READY_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/adapters/: base-adapter.ts  kling3-adapter.ts  runway-gen4-adapter.ts  seedance2-adapter.ts  sora2-adapter.ts  veo3-adapter.ts
src/adapters/__tests__/: adapter-prompt-source.test.ts
src/components/: EmptyState.tsx  LoadingSkeleton.tsx
src/components/board/: BoardCard.tsx  BoardColumn.tsx  BoardToolbar.tsx  board-config.ts
src/components/screenplay/: MonacoScreenplayEditor.tsx
src/config/: cinematography-vocabulary.ts  psychology-rules.ts  screenplay-patterns.ts  veo-prompt-phrases.ts
src/config/__tests__/: cinematography-vocabulary.test.ts  psychology-rules.test.ts
src/schemas/: shot.schema.ts
src/screens/: BRollStudio.tsx  CharacterBible.tsx  Dashboard.tsx  EmotionalArc.tsx  GenerationQueue.tsx  PromptBoard.tsx  ReviewGallery.tsx  ScreenplayEditor.tsx  Settings.tsx  ShotDesigner.tsx  Storyboard.tsx
src/services/: generation-queue.ts  llm-service.ts  persistence.ts  prompt-intelligence.ts  prompt-renderer.ts  screenplay-parser.ts  video-download.ts
src/services/__tests__/: generation-queue.test.ts  prompt-intelligence.test.ts  screenplay-parser.test.ts
src/stores/: generation-store.ts  project-store.ts
src/types/: character.ts  project.ts  scene.ts  screenplay.ts
